--- a/smart_home_system_flutter/pubspec.yaml
+++ b/smart_home_system_flutter/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_blue_plus: ^1.31.0  # Bluetooth Low Energy
+  permission_handler: ^11.0.1  # Runtime permissions
+  shared_preferences: ^2.2.2   # Persist device connections
 
 dev_dependencies:
   flutter_test:
