--- a/smart_home_system_flutter/ios/Runner/Info.plist
+++ b/smart_home_system_flutter/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Need Bluetooth to connect smart home devices</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need location for Bluetooth scanning</string>
 </dict>
 </plist>
