--- a/smart_home_system_flutter/pubspec.yaml
+++ b/smart_home_system_flutter/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   flutter_blue_plus: ^1.31.0  # Bluetooth Low Energy
   permission_handler: ^11.0.1  # Runtime permissions
   shared_preferences: ^2.2.2   # Persist device connections
+  
+  # Firebase dependencies
+  firebase_core: ^3.6.0        # Firebase Core (required for all Firebase services)
+  firebase_auth: ^5.3.1        # Firebase Authentication
+  cloud_firestore: ^5.4.4      # Cloud Firestore database
 
 dev_dependencies:
   flutter_test:
@@ -65,15 +70,15 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+  # An image asset can refer to one or more resolution-specific \"variants\", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
   # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
+  # in this \"flutter\" section. Each entry in this list should have a
+  # \"family\" key with the font family name, and a \"fonts\" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
