--- a/smart_home_system_flutter/windows/CMakeLists.txt
+++ b/smart_home_system_flutter/windows/CMakeLists.txt
@@ -29,6 +29,10 @@ set(CMAKE_SHARED_LINKER_FLAGS_PROFILE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE}")
 set(CMAKE_C_FLAGS_PROFILE "${CMAKE_C_FLAGS_RELEASE}")
 set(CMAKE_CXX_FLAGS_PROFILE "${CMAKE_CXX_FLAGS_RELEASE}")
 
+# Suppress LNK4099 warnings for missing PDBs (common with precompiled libs like Firebase)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /ignore:4099")
+
 # Use Unicode for all projects.
 add_definitions(-DUNICODE -D_UNICODE)
 
