Changing internet permissions to fix firebase error

--- a/smart_home_system_flutter/android/app/src/main/AndroidManifest.xml
+++ b/smart_home_system_flutter/android/app/src/main/AndroidManifest.xml
@@ -56,4 +56,7 @@
     <!-- Location permission required for Bluetooth scanning on Android 6-11 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="30" />
+    
+    <!-- Required for network calls (Firebase, API) -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
